--- a/Views/Schools/Edit.cshtml
+++ b/Views/Schools/Edit.cshtml
@@ -18,11 +18,7 @@
                 <input asp-for="SchoolName" class="form-control" />
                 <span asp-validation-for="SchoolName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="SchoolID" class="control-label"></label>
-                <input asp-for="SchoolID" class="form-control" />
-                <span asp-validation-for="SchoolID" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="SchoolID" />
             <div class="form-group">
                 <label asp-for="Region" class="control-label"></label>
                 <input asp-for="Region" class="form-control" />
