--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using SchoolManager
+﻿@using React.AspNet
+@using SchoolManager
 @using SchoolManager.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
