translation and possible big brain fix on subjects

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Hello there</h1>
+    <h1 class="display-4">My School: </h1>
     <p>Welcome to a knock-off mySchool built with ASP.NET Core by Pegos</a>.</p>
 </div>
