--- a/Views/Subjects/Index.cshtml
+++ b/Views/Subjects/Index.cshtml
@@ -13,19 +13,19 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Department)
+               Τομέας
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StudentAmount)
+                Μαθητές
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RequiredGrade)
+                Βαθμός
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RequiredHours)
+                Διδακτικές Ώρες
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TeacherRegistered)
+                Καθηγητές
             </th>
             <th></th>
         </tr>
